--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,94 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      *{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          outline-color: aqua;
+      }
+      .add{
+          margin: 50px auto 0;
+          width: 400px;
+          height:40px;
+          border-bottom: 1px dashed #333333;
+          display: flex;
+          justify-content: space-between;
+      }
+      .add>input{
+          width: 350px;
+          height:30px;
+      }
+      .add>button{
+          width: 40px;
+          height:30px;
+      }
+      ul{
+          margin: 10px auto 0;
+          list-style: none;
+          width: 400px;
+          /* border: dashed black; */
+          /* border-width:0 1px; */
+      }
+      ul>li{
+          width: 100%;
+          height: 50px;
+          border: solid #333333;
+          border-width: 1px 0;
+          margin: 5px 0;
+          line-height: 50px;
+          text-align: center;
+          overflow: hidden;
+      }
+      ul>li>span{
+          width: 50px;
+          float: left;
+      }
+      ul>li>span:nth-child(2){
+          width: 200px;
+      }
+      ul>li>span:nth-child(3){
+          margin-left: 24px;
+      }
+      ul>li>button{
+          width: 50px;
+          height: 30px;
+          margin-left: 25px;
+      }
+      .green{
+          background: greenyellow;
+      }
+      .red{
+          background: lightcoral;
+      }
+      ul>li:nth-last-child(1)>span{
+          margin-left: 0;
+          width: 60px;
+      }
+      ul>li:nth-last-child(1)>span:nth-child(2){
+          width: 280px;
+          border: solid black;
+          border-width: 0 1px;
+      }
+      ul>li:nth-last-child(1)>span{
+          background: rgb(208, 176, 238);
+          
+      }
+      ul>li:nth-last-child(1)>.selected{
+          background: blueviolet;
+      }
+      .block{
+          display: block;
+      }
+      .none{
+          display: none;
+      }
+  </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
   </body>
 </html>
